<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/inventory_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:background="#F5F5F5"
    android:padding="5dp"
    tools:ignore="RtlHardcoded">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <Button
            android:id="@+id/scanButton"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/btn_blue"
            android:text="@string/scan" />

        <EditText
            android:id="@+id/searchBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:padding="10dp"
            android:background="#FFFFFF"
            android:hint="@string/hint_search"
            android:inputType="text"
            android:autofillHints="none" />
    </LinearLayout>

    <!-- 2 Column Bar for Summary -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/btn_all_items"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#3F51B5"
            android:padding="10dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_items_caps"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/text_total_items"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:textSize="18sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_categories"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#4CAF50"
            android:padding="10dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:layout_marginLeft="5dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categories_caps"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/text_total_categories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:textSize="18sp"/>
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1">

        <ExpandableListView
            android:id="@+id/productListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:groupIndicator="@null" >
        </ExpandableListView>

        <ListView
            android:id="@+id/flatProductListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />
    </FrameLayout>

    <Button
        android:id="@+id/addProductButton"
        style="@style/ButtonText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_green"
        android:ems="10"
        android:text="@string/add_new_product" />

</LinearLayout>
