<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/report_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:id="@+id/report_period_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.3" />

        <Button
            android:id="@+id/previousButton"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_yellow"
            android:text="@string/previous"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/currentBox"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/nextButton"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_yellow"
            android:text="@string/next"
            android:textSize="16sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/searchBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="#FFFFFF"
        android:padding="12dp"
        android:hint="Search ID, Product, or Seller..."
        android:textSize="14sp"
        android:drawableLeft="@android:drawable/ic_menu_search"
        android:drawablePadding="8dp" />

    <LinearLayout
        android:id="@+id/report_table_header"
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TableRow
            android:id="@+id/row_header_id"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="0.1"
            android:background="#FFFFFF"
            android:paddingBottom="1dip"
            android:paddingLeft="1dip"
            android:paddingTop="1dip" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="#33B5E5"
                android:gravity="center"
                android:text="@string/id"
                android:textColor="#FFFFFF"
                android:textSize="10sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/row_header_qty"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="0.1"
            android:background="#FFFFFF"
            android:paddingBottom="1dip"
            android:paddingLeft="1dip"
            android:paddingTop="1dip" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="#33B5E5"
                android:gravity="center"
                android:text="Qty"
                android:textColor="#FFFFFF"
                android:textSize="10sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/row_header_product"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="0.2"
            android:background="#FFFFFF"
            android:paddingBottom="1dip"
            android:paddingLeft="1dip"
            android:paddingTop="1dip" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="#33B5E5"
                android:gravity="center"
                android:text="Product"
                android:textColor="#FFFFFF"
                android:textSize="10sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/row_header_date"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="0.2"
            android:background="#FFFFFF"
            android:paddingBottom="1dip"
            android:paddingLeft="1dip"
            android:paddingTop="1dip" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="#33B5E5"
                android:gravity="center"
                android:text="@string/date"
                android:textColor="#FFFFFF"
                android:textSize="10sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/row_header_total"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="0.15"
            android:background="#FFFFFF"
            android:paddingBottom="1dip"
            android:paddingLeft="1dip"
            android:paddingTop="1dip" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="#33B5E5"
                android:gravity="center"
                android:text="Total"
                android:textColor="#FFFFFF"
                android:textSize="10sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/row_header_seller"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="0.15"
            android:background="#FFFFFF"
            android:paddingBottom="1dip"
            android:paddingLeft="1dip"
            android:paddingTop="1dip" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="#33B5E5"
                android:gravity="center"
                android:text="Seller"
                android:textColor="#FFFFFF"
                android:textSize="10sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/row_header_receipt"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="0.1"
            android:background="#FFFFFF"
            android:paddingBottom="1dip"
            android:paddingLeft="1dip"
            android:paddingRight="1dip"
            android:paddingTop="1dip" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="#33B5E5"
                android:gravity="center"
                android:text="Receipt"
                android:textColor="#FFFFFF"
                android:textSize="10sp"
                android:textStyle="bold" />
        </TableRow>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/report_list_container"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="4.96"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/saleListView"
            android:layout_width="match_parent"
            android:layout_height="fill_parent" >
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/report_footer"
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TableRow
            android:id="@+id/row_footer_label"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="4.5"
            android:background="#FFFFFF"
            android:paddingBottom="1dip"
            android:paddingLeft="1dip"
            android:paddingTop="1dip" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:background="#0099CC"
                android:gravity="center"
                android:paddingRight="3dp"
                android:text="@string/total"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/row_footer_total"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:background="#FFFFFF"
            android:paddingBottom="1dip"
            android:paddingLeft="1dip"
            android:paddingRight="1dip"
            android:paddingTop="1dip" >

            <TextView
                android:id="@+id/totalBox"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="0.75"
                android:background="#0099CC"
                android:gravity="right|center_vertical"
                android:paddingRight="10dp"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </TableRow>
    </LinearLayout>

</LinearLayout>
